[project]
name = "py-tj"
description = "Python scripts for automation and utilities"

version = "0.1.2"
requires-python = ">=3.12"

dependencies = [
    "pyyaml>=6.0.3"
]

[dependency-groups]
dev = [
]

[tool.ruff]
target-version = "py312"
line-length = 88 # Same as Black

# This ensures the 4-space rule is enforced globally
indent-width = 4

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes unused imports
    "I",    # isort import sorting
    "UP",   # pyupgrade (Modernize syntax automatically)
    "B",    # flake8-bugbear (Common bugs/design issues)
    "SIM",  # flake8-simplify (Simplifies code patterns)
    "S",    # flake8-bandit security checks
    "C4",   # flake8-comprehensions
]

ignore = [
    "E501", # Line too long (handled by formatter)
    "S101", # Allow 'assert' (useful for tests/sanity checks)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Explicitly defining the format indent width as well
skip-magic-trailing-comma = false
